--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, felix-branch ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, felix-branch ]
 
 jobs:
 
@@ -12,7 +12,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker-compose up -d 
+steps:
+- uses: actions/checkout@v1
+- name: Build the docker-compose stack
+run: docker-compose up -d
+- name: Sleep
+uses: jakejarvis/wait-action@master
+with:
+time: '60s'
+- name: Check running containers
+run: docker ps -a
