--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,10 +22,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
+      working-directory: ./backend
       run: |
         cd backend
         python -m pip install --upgrade pip
         pip install -r /backend/requirements.txt
     - name: Run Tests
+      working-directory: ./backend
       run: |
         python /backend/manage.py test
