--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,8 +25,8 @@ jobs:
       working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        pip install -r /backend/requirements.txt
+        pip install -r requirements.txt
     - name: Run Tests
       working-directory: ./backend
       run: |
-        python /backend/manage.py test
+        python manage.py test
